--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^14.14.28",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
+    "mongodb": "^3.6.4",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
