--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongodb": "^3.6.9",
     "@types/node": "^14.14.28",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
